# robin-tools

./: .gitignore  .pre-commit-config.yaml  .sops.yaml  README.md  ansible.cfg  pixi.toml  pyproject.toml  typos.toml
commands/ansible/: cmds.md
commands/backup/: rclone.md  sops.md
commands/backup/rclone-redownload/: readme.md  redownload.sh
commands/db/: MSSQL.md
commands/docker/: mssql.md  odbstack.md
commands/process/: kill.md
docker/postgres/: docker-compose.yml
docker/s3/: minio.md
docs/chrome/: selenium.md
docs/conda/: pixi.md
docs/ide/vscode/: restore.md
docs/infra/gitlab/: setup.md
docs/mac/: clipboard-automation.md
docs/sphinx/: quantco.md
docs/tools/: glances.md
inventories/: pi.yaml
inventories/group_vars/: all.yaml
playbooks/: all.yaml  core-services.yaml  install.yaml  pi.yaml  users.yaml
secrets/: core-secrets.sops.yaml  pi-secrets.sops.yaml
shell/: .bashrc  .zshrc
shell/.shell/: .aliasrc.sh  .configrc.sh  .initrc.sh  .secretsrc.sh  .toolrc.sh
shell/_backup/: .bash_history  .bashrc  .zsh_history  .zshrc
